Relabelled first_name and last_name to given and family names in participant views

--- a/participants/templates/participant_view.html
+++ b/participants/templates/participant_view.html
@@ -13,11 +13,11 @@
     <table class="table" id="view_participant_details">
       <tbody> 
         <tr>
-          <td>First name</td>
+          <td>Given name</td>
           <td>{{ participant.first_name }}</td>
         </tr>
         <tr>
-          <td>Last name</td>
+          <td>Family name</td>
           <td>{{ participant.last_name }}</td>
         </tr>
         <tr>
