Fixed typos in qualification templates

--- a/registration/templates/qualify_step1.html
+++ b/registration/templates/qualify_step1.html
@@ -26,7 +26,7 @@
 
   </ul>
 
-  <p> If doesn't matter what your area or issue of primary focus is, but you must meet these criteria to use eConvenor.  
+  <p> It doesn't matter what your area or issue of primary focus is, but you must meet these criteria to use eConvenor.  
 
   <div class="pull-right">
     <a href="{% url 'qualify' 'step0' %}" class="btn btn-default">
