--- a/registration/templates/qualify_step3.html
+++ b/registration/templates/qualify_step3.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-  <p class="lead">eConvenor is free for most groups because it's built by activists, for activists. However, groups which can afford to contribute are expected to.</p>
+  <p class="lead">eConvenor is free for most groups because it's built by activists, for activists. However, groups who can afford to contribute are expected to.</p>
 
   <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
 Most groups</p>
@@ -19,7 +19,7 @@ Most groups</p>
   <p>Does your group have no budget or a tiny budget? eConvenor was built for you! You can use eConvenor completely free. No obligation, no worries.</p>
 
   <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-Groups which can afford to contribute</p>
+Groups who can afford to contribute</p>
 
   <p>Groups who feel that they can afford to make a donation in return for using eConvenor should do so once each year.</p>
 
