--- a/registration/templates/qualify_step5.html
+++ b/registration/templates/qualify_step5.html
@@ -21,7 +21,7 @@
 
 <p> eConvenor is a brand new service and is currently what's known as a "beta release". This means that it is usable and includes its basic initial feature-set, but that the software it runs on also contains some bugs.</p>
 
-<p>As the bug fixing process takes some time, and eConvenor is working well enough to be useful right now, it is being released in beta so that the activist community can start benefiting from it sooner rather than later.</p>
+<p>As the bug-fixing process takes some time, and eConvenor is working well enough to be useful right now, it is being released in beta so that the activist community can start benefiting from it sooner rather than later.</p>
 
 <p>If you encounter unexpected behaviour while using eConvenor, please be patient and know that we are working flat out to find and fix bugs, and improve the service. You can help us by submitting bug reports through the "Feedback" menu when using eConvenor, or by writing code for eConvenor if you know how.<p> 
 
