--- a/registration/templates/qualify_step6.html
+++ b/registration/templates/qualify_step6.html
@@ -15,7 +15,7 @@
   <ul>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      use your account only for groups which are progressive, committed to social justice and not-for-profit</li>
+      use your account only for groups who are progressive, committed to social justice and not-for-profit</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
       contribute financially if your group should do so</li>
