--- a/registration/templates/qualify_step0.html
+++ b/registration/templates/qualify_step0.html
@@ -31,7 +31,7 @@
       
   <p>It takes about 10 minutes to do the eligibility check and read the terms and conditions.</p>
 
-  <p>We're excited to offer groups which share our vision of a better world a tool to help them be more effective.</p>
+  <p>We're excited to offer groups who share our vision of a better world a tool to help them be more effective.</p>
   
   <p>Keep fighting!</p>
 
