Made 500 error page more informative

--- a/econvenor/templates/500.html
+++ b/econvenor/templates/500.html
@@ -4,6 +4,8 @@
 
   <h2>There has been an error on the server.</h2>
   
-  <p>Return to the <a href="{% url 'index' %}">eConvenor main page</a></p>
+  <p>You can use your browser's back button to return to the page you just left.</p>
+  
+  <p>If you have time, we'd love it it you would file a <a href="{% url 'bug-report' %}">bug report</a> to let us know about the issue so we can get onto fixing it.</p>
       
 {% endblock %}
