--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -126,16 +126,11 @@
     },
     "Please select a time from the options available");
 
-    jQuery.validator.addMethod("meetingNumberCheck", function(value, element) {
-      return this.optional(element) || /^[a-zA-Z0-9\-\_\/]+$/.test(value);
-    },
-    "The meeting number can only contain letters, numbers and these characters: '-', '_', '/'");
-
     $("#editagendaform").validate({
       rules: {
         meeting_no: {
           required: true,
-          meetingNumberCheck: true,
+          maxlength: 30,          
         },
         meeting_type: "required",
         date_scheduled: {
@@ -158,7 +153,7 @@
       },
       messages: {
         meeting_no: {
-          required: "Please enter a number or code for this meeting",
+          required: "Please enter a number or name for this meeting",
         },
         meeting_type: "Please select the type of meeting that this is",
         date_scheduled: {
