--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -66,6 +66,7 @@ body {
   color: #000000;
   padding-top: 50px;
   background-image: url('/static/images/texture.png');
+  min-width: 993px;
 }
 
 
@@ -126,14 +127,7 @@ body {
 /* NAVIGATION - SIDEBAR
 -------------------------------------------------- */
 
-/* Hide for mobile */
-
 .sidebar {
-  display: none;
-}
-
-@media (min-width: 768px) {
-  .sidebar {
     position: fixed;
     top: 50px;
     bottom: 0;
@@ -143,7 +137,6 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
     background-color: #333333;
-  }
 }
 
 /* Parent level */
