Added a quick start guide to the welcome page

--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -406,6 +406,12 @@ body {
   overflow-y: auto;
 }
 
+.panel-welcome .panel-body {
+  background-color: #ffffff;
+  max-height: 295px;
+  overflow-y: auto;
+}
+
 
 /* TABLES
 -------------------------------------------------- */
