Added note about abandoned account to terms and conditions

--- a/registration/templates/qualify_step8.html
+++ b/registration/templates/qualify_step8.html
@@ -40,6 +40,10 @@
       use eConvenor's name or logo without eConvenor's permission</li>
   </ul>
 
+<p class="lead">Abandoned accounts</p>
+
+<p>If you don't sign in to your account for 12 months, it will be treated as abandoned. eConvenor will delete abandoned accounts.</p>
+
 <p class="lead">Updates to eConvenor's terms and conditions</p>
 
 <p>eConvenor's terms and conditions are likely to change from time to time. We will tell you when they do. By continuing to use eConvenor after the terms and conditions change, you agree to the new terms and conditions.</p>
