Added more info to the welcome page

--- a/registration/templates/welcome.html
+++ b/registration/templates/welcome.html
@@ -10,13 +10,13 @@
   <div class="panel panel-primary panel-welcome">
     <div class="panel-heading">
       <i class="fa fa-star fa-fw"></i>&nbsp;
-	  Welcome to eConvenor!
+	  Welcome to eConvenor beta!
     </div>
-    <div class="panel-body text-center">
-      <br/><br/>
+    <div class="panel-body">
       <p>Thanks for setting up an account!</p>
-      <p>Please check out the quick start guide below to get started.<p/>
-      <br/>
+      <p>At the moment the service is only able to be viewed properly on computers, or on newer tablets. You'll still see it on your phone or older tablet, but things won't appear in the right places on the screen!</p>
+      <p>Also, like other web services, eConvenor doesn't work if your browser has javascript disabled.</p>
+      <p>Please check out the quick-start guide below to get started.<p/>
     </div>
   </div>  
 </div>
