--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -38,7 +38,9 @@
           <img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200" height="45" alt="An image of the eConvenor logo">
         </span>
         <div class="pull-right">
-          <a href={% url 'login' %}><button type="submit" class="btn btn-default">Sign in</button></a>
+          <a href={% url 'qualify' 'step0' %}><button type="button" class="btn btn-primary">Sign up</button></a>
+          <a href={% url 'login' %}><button type="submit" class="btn btn-primary">Sign in</button></a>
+
         </div>
       </div>
     </div>
@@ -49,7 +51,7 @@
     <div class="jumbotron" id="hero">
       <div class="container">
         <h1 class="text-center">Make organising your group less work.</h1>
-        <h2 class="text-center">It's free and available from April 2nd.</h2>
+        <h2 class="text-center">eConvenor is now available in beta.</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
 
@@ -89,7 +91,7 @@
               <i class="fa fa-copy fa-stack-1x fa-inverse"></i>
             </span>
             <h2>Stay organised and consistent</h2>
-            <p>eConvenor keeps searchable lists of your decisions and tasks. Now you can check what you did or decided last week or last year, even if you have a whole new committee. Your agendas and minutes will be easy to find.</p>
+            <p>eConvenor keeps lists of your decisions and tasks. Now you can check what you did or decided last week or last year, even if you have a whole new committee. Your agendas and minutes will be easy to find.</p>
           </div><!-- /.col-xs-6 --> 
 
           <!-- Column 4 -->
@@ -135,13 +137,13 @@
               <li><i class="fa-li fa fa-file-text fa-3x orange"></i>
                 <ul>
                   <li><p class="lead orange">Helps build meeting agendas</p></li>
-                  <li><p>Use a built-in agenda template or create your own. You can add time limits for each item and eConvener will tell you what time the meeting should finish. Unfinished business and outstanding tasks are automatically included, then it's emailed out.</p></li>
+                  <li><p>Create and edit agendas quickly and easily. You can add time limits for each item and eConvener will tell you what time the meeting should finish. Unfinished business and outstanding tasks are automatically included, then it's emailed out.</p></li>
                 </ul>
               <!-- Left column item 2 -->
               <li><i class="fa-li fa fa-file-text-o fa-3x orange"></i>
                 <ul>
                   <li><p class="lead orange">Creates easy-to-read minutes</p></li>
-                  <li><p>One mouse click creates a minutes template from the agenda. Just fill it in. Once you finish the minutes they can be emailed out in seconds. The front page of the minutes has two summary tables for quick reference&#151;one for tasks assigned and one for decisions made.</p></li>
+                  <li><p>One mouse click creates a minutes template from the agenda. Just fill it in. Once you finish the minutes they can be emailed out in seconds. The minutes show the decisions clearly, and there is a task table for quick reference.</p></li>
                 </ul> 
               </li>
               <!-- Left column item 3 -->
@@ -167,14 +169,14 @@
               <li><i class="fa-li fa fa-list fa-3x orange"></i>
                 <ul>
                   <li><p class="lead orange">Collates and lists decisions</p></li>
-                  <li><p>Decisions made by your group are copied from the minutes and collated into a sortable, searchable master list. Decisions can be searched by keyword or date. This is a useful tool to stop your group making the same decisions twice.</p></li>
+                  <li><p>Decisions made by your group are copied from the minutes and collated into a master list. Shortly, decisions will be searchable by keyword or date. This is a useful tool to stop your group making the same decisions twice.</p></li>
                 </ul>
               </li>
               <!-- Right column item 3 -->
               <li><i class="fa-li fa fa-users fa-3x orange"></i>
                 <ul>
                   <li><p class="lead orange">Holds your participant's details</p></li>
-                  <li><p>eConvenor keeps a list of your group's participants, plus a summary page for every participant. Each participant's page shows their tasks. Reminders about incomplete tasks can be sent from a participant's page.</p></li>
+                  <li><p>eConvenor keeps a list of your group's participants, plus a summary page for every participant. Each participant's page shows their tasks.</p></li>
                 </ul> 
               </li>              
             </ul><!-- /.fa-ul -->
@@ -244,7 +246,6 @@
                   <li><p><i class="fa fa-times fa-lg fa-align red"></i>&nbsp;&nbsp;is conservative or oppressive</p></li>
                   <li><p><i class="fa fa-times fa-lg red"></i>&nbsp;&nbsp;operates for profit</p></li>
                   <li><p><i class="fa fa-times fa-lg red"></i>&nbsp;&nbsp;is a government agency</p></li>
-                  <li><p><i class="fa fa-times fa-lg red"></i>&nbsp;&nbsp;is a major political party or</p></li>
                   <li><p><i class="fa fa-times fa-lg red"></i>&nbsp;&nbsp;aims to spread religion.</p></li>                  
                 </ul>
               </li><!-- /.fa.li -->
@@ -272,7 +273,7 @@
         <div class="row">
           <div class="col-xs-12">
             <h1>eConvenor is free!</h1>
-            <p class="lead"><span class="orange">This is an open source project and we aim to make the eConvenor service available as widely as we can.</span>&nbsp; This means eConvenor is free for almost everyone, and we ask better funded groups to contribute financially.</p>      
+            <p class="lead"><span class="orange">We aim to make the eConvenor service available as widely as we can.</span>&nbsp; This means eConvenor is free for almost everyone, and we ask better funded groups to contribute financially.</p>      
           </div><!-- /.col-xs-12 -->
         </div><!-- /.row -->    
         
@@ -339,8 +340,8 @@
     ================================================== -->
     <div class="jumbotron divider black-background" id="divider4">
       <div class="container">
-      	<h1 class="text-center">eConvenor launches on April 2nd.</h1>
-      	<h2 class="text-center">Please come back then and start using the service.</h2>
+      	<h1 class="text-center">eConvenor is available now in beta.</h1>
+      	<h2 class="text-center">Sign up for an account!</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
   
