Bugfix: Made date display in bug report and feature request lists

--- a/bugs/templates/bug_list.html
+++ b/bugs/templates/bug_list.html
@@ -21,7 +21,7 @@
 				<tr id={{ bug.id }} onclick="document.location='{% url 'bug-edit' bug.id %}';">
 					<td>{{ bug.id }}</td>
 					<td>{{ bug.title }}</td>
-					<td>{{ bug.date }}</td>
+					<td>{{ bug.created }}</td>
 					<td>{{ bug.status }}</td>
 				</tr>
 			{% empty %}
