--- a/bugs/templates/bug_edit.html
+++ b/bugs/templates/bug_edit.html
@@ -42,13 +42,14 @@
 			<label>What did the the bug display on the screen?</label>
       		{{ bug_form.behaviour|setclass:"form-control" }}
       	</div>
+        {% comment %}
       	{% ifequal allow_status_editing True %}
 		<div class="form-group">
 			<label>Bug status</label>
       		{{ bug_form.status|setclass:"form-control" }}
       	</div>
       	{% endifequal %}
-       
+        {% endcomment %}       
      	<button type="submit" class="btn btn-primary" data-toggle="button">Save bug</button>
      	<a href={% url 'bug-list' %}><button type="button" class="btn btn-default" data-toggle="button">Cancel</button></a>
 	</form>
