--- a/bugs/templates/feature_edit.html
+++ b/bugs/templates/feature_edit.html
@@ -38,13 +38,14 @@
 			<label>How would you like to be able to do it?</label>
       		{{ feature_form.suggestion|setclass:"form-control" }}
       	</div>
+        {% comment %}
       	{% ifequal allow_status_editing True %}
 		<div class="form-group">
 			<label>feature status</label>
       		{{ feature_form.status|setclass:"form-control" }}
       	</div>
       	{% endifequal %}
-       
+        {% endcomment %}       
      	<button type="submit" class="btn btn-primary" data-toggle="button">Save feature</button>
      	<a href={% url 'feature-list' %}><button type="button" class="btn btn-default" data-toggle="button">Cancel</button></a>
 	</form>
