Bugfix: Corrected incorrect html tags in dashboard template

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -40,7 +40,8 @@
       {% else %}
       <div class="panel-body text-center">
         <br/><br/>
-        <p>There are no tasks overdue.<br/>Nice work!<p/>
+        <p>There are no tasks overdue.</p>
+        <p>Nice work!</p>
       </div>
       {% endif%}
   </div>  
@@ -84,7 +85,7 @@
       <div class="panel-body text-center">
         <br/><br/>
           This box will be empty until eConvenor has more data.
-        <p/>
+        </p>
       </div>
     {% endif%}
   </div>  
@@ -165,7 +166,7 @@
     {% else %}
       <div class="panel-body text-center">
         <br/><br/>
-        <p>There are no tasks due soon.<br/>Click 
+        <p>There are no tasks due soon.</p><p>Click 
           the heading of this box to create some.<p/>
       </div>
     {% endif%}
@@ -180,7 +181,8 @@
     </div>
     <div class="panel-body text-center">
       <br/><br/>
-      <p>eConvenor's Beta version goes live on April 2nd!</p>
+      <p>eConvenor Beta is live!</p>
+      <p>You may have already noticed.</p>
     </div>
   </div>  
 </div>
