Altered button labels on current meetings template

--- a/meetings/templates/meeting_list_current.html
+++ b/meetings/templates/meeting_list_current.html
@@ -53,7 +53,7 @@
                   <a href="{% url 'agenda-edit' meeting.id %}" type="button"
                     class="btn btn-primary">
                       <i class="fa fa-edit fa-fw fa-lg"></i>&nbsp;
-                      Write agenda
+                      Work on agenda
                   </a>
                 </td>
               {% elif no_of_pdfs == 1 %}
@@ -61,7 +61,7 @@
                   <a href="{% url 'minutes-edit' meeting.id %}" type="button"
                     class="btn btn-primary">
                       <i class="fa fa-edit fa-fw fa-lg"></i>&nbsp;
-                      Write minutes
+                      Work on minutes
                   </a>
                 </td>
               {% elif no_of_pdfs == 2 %}           
