--- a/docs/templates/minutes_edit_ajax_items.html
+++ b/docs/templates/minutes_edit_ajax_items.html
@@ -253,7 +253,7 @@
   $(function() {
   
     jQuery.validator.addMethod("timeCheck", function(value, element) {
-      return this.optional(element) || /^([0-1]?[0-9]|[2][0-3]):([0-5][0-9])$/.test(value);
+      return this.optional(element) || /^ *(1[0-2]|[1-9]):[0-5][0-9] *(a|p|A|P)(m|M) *$/.test(value);
     },
     "Please select a time from the options available");
 
