Made Actions toolbar buttons respond on click with jQuery

--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -175,6 +175,7 @@
       },
       submitHandler: function(form) {
         $('body').css( 'cursor', 'wait' );
+        preparingPreview();
         var next_page = $("#submit_agenda").attr('goto');
         saveWithoutRefresh('ajax_button=save_agenda', next_page);
       },
