--- a/docs/templates/document_edit.html
+++ b/docs/templates/document_edit.html
@@ -161,7 +161,7 @@
         </li>
         <li>
           <button type="button" class="btn btn-toolbar ajax-button" 
-            id="save_{{ doc_type }}">
+            id="save_document">
               <i class="fa fa-save fa-fw"></i>&nbsp;
               Save changes
           </button>
