--- a/registration/templates/qualify_step6.html
+++ b/registration/templates/qualify_step6.html
@@ -77,7 +77,11 @@
   </ul>
 
   <div class="pull-right">
-    <a href="{% url 'qualify' 'step5' %}" class="btn btn-default">
+    {% if trial_account %}
+      <a href="{% url 'qualify' 'step5a' %}" class="btn btn-default">
+    {% else %}
+      <a href="{% url 'qualify' 'step5' %}" class="btn btn-default">    
+    {% endif %}
       <i class="fa fa-arrow-circle-left fa-lg fa-fw"></i>&nbsp;
       Back
     </a>
@@ -85,7 +89,11 @@
       <i class="fa fa-times-circle fa-lg fa-fw"></i>&nbsp;
       Quit
     </a>
-    <a href="{% url 'qualify' 'step7' %}" class="btn btn-primary">
+    {% if trial_account %}
+      <a href="{% url 'qualify' 'step7a' %}" class="btn btn-primary">
+    {% else %}
+      <a href="{% url 'qualify' 'step7' %}" class="btn btn-primary">    
+    {% endif %}
       <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
       I understand
     </a>
