--- a/registration/templates/qualify_step9.html
+++ b/registration/templates/qualify_step9.html
@@ -22,7 +22,11 @@
   </ul>
 
   <div class="pull-right">
-    <a href="{% url 'qualify' 'step8' %}" class="btn btn-default">
+    {% if trial_account %}
+      <a href="{% url 'qualify' 'step8a' %}" class="btn btn-default">
+    {% else %}
+      <a href="{% url 'qualify' 'step8' %}" class="btn btn-default">    
+    {% endif %}
       <i class="fa fa-arrow-circle-left fa-lg fa-fw"></i>&nbsp;
       Back
     </a>
@@ -30,7 +34,11 @@
       <i class="fa fa-times-circle fa-lg fa-fw"></i>&nbsp;
       Quit
     </a>
-    <a href="{% url 'register' %}" class="btn btn-primary">
+    {% if trial_account %}
+      <a href="{% url 'register' 'trial' %}" class="btn btn-primary">
+    {% else %}
+      <a href="{% url 'register' %}" class="btn btn-primary">
+    {% endif %}
       <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
       I agree
     </a>
