--- a/registration/templates/qualify_step9.html
+++ b/registration/templates/qualify_step9.html
@@ -37,7 +37,7 @@
     {% if trial_account %}
       <a href="{% url 'register' 'trial' %}" class="btn btn-primary">
     {% else %}
-      <a href="{% url 'register' %}" class="btn btn-primary">
+      <a href="{% url 'register' '' %}" class="btn btn-primary">
     {% endif %}
       <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
       I agree
