Minor edit to qualification process text

--- a/registration/templates/qualify_step5.html
+++ b/registration/templates/qualify_step5.html
@@ -17,7 +17,7 @@
     <span class="red">Unions or parties in high-income, reasonably democratic countries</span>
   </p>
   
-  <p>As a union or party in a high-income, reasonably democratic country, your group is eligible to use eConvenor for a fee. You can set up a <span class="red">free 30-day trial</span> account to evaluate the service.</p>
+  <p>As a union or party in a high-income, reasonably democratic country, your group is eligible to use eConvenor for a fee. You can set up a <span class="red">free 30-day trial</span> account to evaluate the service first.</p>
 
   <p>If you're a very small political party and we like what you stand for, we may bend this rule and provide you with free access to eConvenor. Feel free to <a href="mailto:fees@econvenor.org?subject=Fee+exemption+enquiry">email us</a>&nbsp;to put your case.</p>
 
@@ -72,11 +72,11 @@
 
 <p class="lead"><span class="red">eConvenor is currently a beta release</span></p>
 
-<p> eConvenor is a brand new service and is currently what's known as a "beta release". This means that it is usable and includes its basic initial feature-set, but that the software it runs on also contains some bugs.</p>
+<p> eConvenor is a brand new service and is currently what's known as a "beta release". This means that it is usable and includes a basic feature-set, but that the software it runs on also contains some bugs.</p>
 
-<p>As the bug-fixing process takes some time, and eConvenor is working well enough to be useful right now, it is being released in beta so that the activist community can start benefiting from it sooner rather than later.</p>
+<p>As the bug-fixing process takes some time and eConvenor is working well enough to be useful right now, it is being released in beta so that the activist community can start benefiting from it sooner rather than later.</p>
 
-<p>If you encounter unexpected behaviour while using eConvenor, please be patient and know that we are working flat out to find and fix bugs, and improve the service. You can help us by submitting bug reports through the "Feedback" menu when using eConvenor, or by writing code for eConvenor if you know how.<p> 
+<p>If you encounter unexpected behaviour while using eConvenor, please be patient and know that we are working flat out to find and fix bugs and improve the service. You can help us by submitting bug reports through the "Feedback" menu when using eConvenor, or by writing code for eConvenor if you know how.<p> 
 
 
 
