Completed account management feature

--- a/registration/templates/register.html
+++ b/registration/templates/register.html
@@ -174,26 +174,26 @@ Log in details
         },
         first_name: {
           required: "Please enter your given name.",
-          maxlength: 30,
+          maxlength: "Maximum of 30 characters",
         },
         last_name: {
-          maxlength: 30,
+          maxlength: "Maximum of 30 characters",
         },
         name: {
           required: "Please enter the name of your group.",
-          maxlength: 100,
+          maxlength: "Maximum of 100 characters",
         },
         aim: {
           required: "Please enter your group's aim.",
-          maxlength: 100,
+          maxlength: "Maximum of 100 characters",
         },
         focus: {
           required: "Please enter your group's area of focus.",
-          maxlength: 40,
+          maxlength: "Maximum of 40 characters",
         },
         country: {
           required: "Please enter your group's country.",
-          maxlength: 40,
+          maxlength: "Maximum of 40 characters",
         },
       },
     });
