Bugfix: Made background for document_sent panel body white

--- a/docs/templates/document_sent.html
+++ b/docs/templates/document_sent.html
@@ -11,7 +11,7 @@
     <div class="panel-heading">
       Success!
     </div>
-    <div class="panel-body">
+    <div class="panel-body panel-body-light">
       {% if doc_type == "agenda" %}
         <p>The agenda for meeting {{ meeting_no }} has been emailed out.</p>
       {% elif doc_type == "minutes" %}
