--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -416,9 +416,10 @@ body {
   overflow-y: auto;
 }
 
-.panel-account .panel-body {
+.panel-body-light {
   background-color: #ffffff;
 }
+
 
 /* TABLES
 -------------------------------------------------- */
